--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div id="imagem">
                 <img src="img/franquias-geeks.jpg" alt="Imagem de fundo">
             </div>
-                <img class="descri_img" src="/login3.0/img/ChatGPT Image 17_07_2025, 21_16_44.png" alt="">
+                <img class="descri_img" src="/img/ChatGPT Image 17_07_2025, 21_16_44.png" alt="">
 
                 <div class="cont_descri">
                     <h1 id="color">Bem-vindo ao nosso site!</h1>
